<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/about_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/about_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app_desc"
                android:textSize="16sp"
                android:paddingBottom="16dp" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/author_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_desc"
                android:textSize="15sp"
                android:paddingBottom="12dp" />

            <TextView
                android:id="@+id/library_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libraries"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/library_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mpandroidchart_desc"
                android:textSize="15sp"
                android:paddingBottom="12dp" />

            <TextView
                android:id="@+id/license_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:paddingBottom="8dp" />

            <TextView
                android:id="@+id/license_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apache_license"
                android:textSize="13sp"
                android:lineSpacingExtra="4dp"
                android:textIsSelectable="true"
                android:fontFamily="monospace"/>
        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>