<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawerLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">

<!-- Główny widok -->
<FrameLayout
    android:id="@+id/mainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_view.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Tekst informacyjny -->
            <TextView
                android:id="@+id/weightInfoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_weight"
                android:textSize="16sp"
                android:paddingBottom="12dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Przyciskowe filtry czasu -->
            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weightInfoText"
                app:singleSelection="true"
                app:selectionRequired="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1w"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_1w" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1m"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_1m" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn6m"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_6m" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn1y"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_Max" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <!-- Wykres -->
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weightChart"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/toggleButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Etykieta historii -->
            <TextView
                android:labelFor="@id/weightHistoryRecyclerView"
                android:id="@+id/weightHistoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historia_wpis_w_wagi"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/weightChart"
                app:layout_constraintStart_toStartOf="parent"/>

            <!-- RecyclerView z historią -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weightHistoryRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/weightHistoryLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- FloatingActionButton w prawym dolnym rogu -->
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_weight_entry"
                android:src="@drawable/baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

<!-- Menu -->
<LinearLayout
    android:id="@+id/navigationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#80000000"
    android:orientation="vertical">
    <!-- Tutaj umieść zawartość menu -->

    <Button
        android:id="@+id/home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_home" />
    <Button
        android:id="@+id/exercises_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_exercises" />
    <Button
        android:id="@+id/weight_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_weight" />
    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/about_weight" />
</LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>